yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-sample
  labels:
    app: springboot-sample
  name: springboot-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-sample
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: springboot-sample
        version: v1.0.0
      annotations:
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: springboot-sample
        image: registry.hub.docker.com/satellite/springboot-sample:1.0.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
