yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: springboot-sample
  name: springboot-sample
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: http
  selector:
    app: springboot-sample
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
