yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels: 
    app: springboot-sample
  name: springboot-sample
spec:
  rules:
  - host: 
    http:
      paths:
      - backend:
          serviceName: springboot-sample
          servicePort: 8215
        path: /?(.*)
status:
  loadBalancer:
    ingress:
    - ip: 147.139.137.29
